# Shared

./: .gitignore  CMakeLists.txt  FileFormatManager.cpp  FileFormatManager.hpp  FileManager.xml  Manager.py  README.md  hehe.txt  main  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
